Fix shadow clipping from line clamp.

--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -25,12 +25,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  /* line clamp */
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  line-height: 1.5em;
+  height: 100%;
 }
 
 @media screen and (min-width: 750px) {
